<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qing Pool</string>
    <string name="retourAccueil">Back to front page</string>
    <string name="gestionCompte">Account management</string>
    <string name="btnConnexion">Begin!</string>
    <string name="redirectionPagePrincipale">Pool management</string>
    <string name="btnSignIn">Sign in</string>
    <string name="btnAccepter">Accept</string>
    <string name="btnRege">Reroll</string>
    <string name="btnConnexionReset">Reset</string>
    <string name="btnStartPool">Create new pool</string>
    <string name="btnConnPool">Connect to existing pool</string>
    <string name="btnViewPool">View all pools</string>
    <string name="btnCreerPool">Create pool</string>
    <string name="btnConnexionPool">Connection</string>
    <string name="btnPageAccueil">Back to front page</string>
    <string name="btnPasserChoix">Go to player selection</string>
    <string name="btnVoirJoueur">View players</string>
    <string name="btnVoirProfilJoueur">View profile</string>
    <string name="lblNomPool">Pool name</string>
    <string name="lblMdp">Password</string>
    <string name="lblCourriel">Email</string>
    <string name="lblConfMdp">Password confirmation</string>
    <string name="lblNbPartMax">Maximum number of participants</string>
    <string name="lblNbPartMax1">Players max</string>
    <string name="hintEmail">abc@gmail.com</string>
    <string name="hintMdp">Passeword</string>
    <string name="listJoueur">Players list</string>
    <string name="btnEnvoieCou">Invite your friends</string>
    <string name="btnRetPart">Back to participant</string>
    <string name="ok">OK</string>
    <string name="btnRsltFinal">Final results</string>
    <string name="podium">Podium</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>

    <string name="default_status" />
    <string name="sign_out_button_name">Logout</string>
    <string name="revoke_access_button_name">Revoke access rights</string>
    <string name="signing_in_status">Connection with Google+</string>
    <string name="signed_in_status">Connected as \"%s\".</string>
    <string name="plus_generic_error">Connection with Google+ impossible.</string>
    <string name="progress_message">Connection to Google&#8230;</string>
    <string name="revoke_access_status">Access rights revoked</string>
    <string name="revoke_access_error_status">Unable to revoke access rights.</string>
    <string name="loading_status">Loading&#8230;</string>
    <string name="signed_out_status">Disconnected</string>
    <string name="unknown_person">Unknown</string>
    <string name="sil">Silhouette</string>
    <string name="nomPart">Name: </string>
    <string name="agePart">Lang: </string>
    <string name="scorePart">Score: </string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_profilpart">Pooler\'s profile</string>
    <string name="title_activity_evoie_courriel">Email Activity</string>
    <string name="equipe">Team: </string>
    <string name="fermer">Close</string>
    <string name="selection">Select a player</string>
    <string name="img_choix_description">Selection</string>
    <string name="title_activity_profil_joue_activity1">Player\'s profile</string>
    <string name="lbl_liste_vide">Empty</string>
    <string name="pd_title">Players retreival</string>
    <string name="pd_content">Please wait while we upload the poolers list.</string>
    <string name="comm_error">Connection error</string>
    <string name="erreur">Error</string>
    
    <string name="titre_accueil">Greetings!</string>
    <string name="titre_choix">Player\'s choice</string>
    <string name="titre_connexion">Connection</string>
    <string name="titre_conn_pool">Pool connection</string>
    <string name="titre_courriel">Email</string>
    <string name="titre_liste_part">Poolers</string>
    <string name="titre_liste_pool">Pools</string>
    <string name="titre_liste_joue">Players</string>
    <string name="titre_liste_alea">Random list</string>
    <string name="titre_nouveau_pool">New pool</string>
    <string name="titre_principale">Main page</string>
    <string name="titre_profil_joue">Player\'s profile</string>
    <string name="titre_profil_part">Pooler\'s profile</string>
    <string name="titre_res_fin">Final results</string>
    
    <string name="courriel_contacts_invite">Contact@ToInvite.com</string>
    <string name="courriel_rejoindre">Come and join us on Qing Pool!</string>
    <string name="courriel_cree">We have a pool running and we would like you to join us!</string>
    <string name="courriel_envoie">Send</string>
    
    <string name="screen_accueil">Front desk</string>
    <string name="screen_choix_joue">Player\'s choice</string>
    <string name="screen_connexion">Connection</string>
    <string name="screen_conn_pool">Pool connection</string>
    <string name="screen_courriel_envoie">Send</string>
    <string name="screen_liste_part">Pooler\'s list</string>
    <string name="screen_liste_pool">Pool list</string>
    <string name="screen_liste_alea">Random list</string>
    <string name="screen_nouveau_pool">New pool</string>
    <string name="screen_principale">Main page</string>
    <string name="screen_profil_joue">Player\'s profile</string>
    <string name="screen_profil_part">Pooler\'s profile</string>
    <string name="screen_rslt_pool">Pooler\'s profile</string>       
    
    <string name="toast_mauvais_mdp">Invalid password.</string>
    <string name="toast_nbr_max_atteint">Maximum poolers reached.</string>
    <string name="toast_pool_non">Sorry, no pool with that name.</string>
    <string name="toast_pool_deja">You are already in this pool.</string>
    <string name="toast_courriel_inexistant">You do not have an email manager installed.</string>
    <string name="toast_joueur_ajoute">Players have successfully being added.</string>
    <string name="toast_pool_maximum">Please enter a maximum number of poolers.</string>
    <string name="toast_pool_meme_nom">This name is already taken. Please choose another one.</string>
    <string name="toast_pool_mdp">The password and confirmation do not match.</string>
    
    <string name="popup_nom">Pool options for </string>
    <string name="popup_liste">Pooler\'s list</string>
    <string name="popup_quitter">Leave the pool</string>
    
    <string name="menu_aide">Help</string>
    <string name="menu_deconnexion">Logout</string>
    
    <!-- Texte des menus d'aide -->
    <string name="aide_conn_pool">
        <![CDATA[
        <p>The pool connection page allows you to 
        connect to an existing pool. To proceed,
        simply enter the name and password of the
        pool in the text fields. Once the 
        credentials have been entered, press the 
        <b><i>Connect</i></b> button to connect.</p>
        
        <p>The <b><i>Reset</i></b> button resets the fields
        to blank.</p>
        
        <p>Press the logo to go back to the main page.</p> 
        ]]></string>   
    
    <string name="aide_list_part">    	
    	<![CDATA[
    	<p>Here\'s the list of poolers that belong to
    	the pool you just selected.</p>
        
        <p>You can select a pooler by pressing and 
        holding down his name to visualise the poolers
        players\' list as well as other usefull 
        informations.</p>        
                
        <p>Press the logo to go back to the main page.</p>       
        ]]></string>    	
    
    <string name="aide_list_pool">
        <![CDATA[
        <p>Here\'s the existing pool list to which you 
    	are connected.</p>
        
        <p>You can select a pool by to visualise the poolers
        or to disconnect from that pool.</p>        
        
        <p><i>Note that if you disconnect from a pool,
        you can reconnect from the <b>Pool connection</b>
        page.</i></p>
        
        <p>Press the logo to go back to the main page.</p>        
        ]]></string>
        
    <string name="aide_list_rand">
        <![CDATA[
        <p>This page shows you the players that were 
        randomly assigned to you for this pool.</p>
        
        <p>You can always reroll your players with the 
        <i><b>Reroll</i></b> button.</p>
        
        <p>Once you are satisfied with your players choice,
        press the <b><i>Accept</i></b> button to confirm
        your choice.<p>
        
        <p><i>Note that the scores are not displayed to keep
        the \"random\" part significant.</i></p>
        
        <p>Press the logo to go back to the main page.</p>
        ]]></string>
    
    <string name="aide_nouv_pool">
        <![CDATA[
        <p>The new pool page will help you create your 
        own pool! To do so, enter the required informations
        in the fields.<p>
        
        <p>The fields are <b><i>Pool name, Password,
        Password confirmation, Maximum number of poolers.
        </i></b><p>
        
        <p>The <b><i>Create pool</i></b> button will
        confirm the creation of the pool.</p>
        
        <p>Press the logo to go back to the main page.</p>
        ]]></string>
    
    <string name="aide_principale">
        <![CDATA[
        <p>Welcome on the main page! On this page there
        are three buttons that will guide you through the
        application.</p>
        
        <p>The first button, <b><i>Create a new pool</p></b> will bring you
        to the creation page where you will be able to start
        your own pool.</p>
        
        <p>The second button, <b><i>View all pools</i></b> 
        will list all the pool currently running.</p>
        
        <p>The last button, <b><i>Connect to existing pool</i></b>
        will give you access to existing pools with the
        right credentials.</p>
        ]]></string>
        
    <string name="aide_prof_part">
        <![CDATA[
        <p>This is the pooler\'s profile page which 
        you selected.</p>
        
        <p>On this page, you can see usefull information 
        on the pooler as well as his players list.</p>
        
        <p>You can see a player\'s profile page by holding 
        down his name in the list.</p>
        
        <p>Press the logo to go back to the main page.</p>
        ]]></string>
   
</resources>
