<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/infoJoueur" >
        
   		<ImageView
		    android:id="@+id/imagePool"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:src="@drawable/titre"
		    android:contentDescription="@string/app_name" 
		    android:layout_marginBottom="7dp"
		    android:layout_marginTop="10dp"/>
   
		<LinearLayout 
		    android:orientation="horizontal"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:paddingTop="15dip">
	
	   		<ImageView
		       	android:id="@+id/imagePart"
		       	android:layout_width="wrap_content"
		       	android:layout_height="wrap_content"
		       	android:layout_marginBottom="7dp"
		       	android:layout_marginLeft="4dp"
		       	android:layout_marginTop="10dp"
		       	android:layout_marginRight="4dp"
		       	android:contentDescription="@string/sil" />
	   
	   		<LinearLayout 
	   		    android:orientation="vertical"
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content">
			    
		   		<TextView 
			        android:id="@+id/nomPart"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/nomPart"
			        android:layout_marginBottom="7dp"
				    android:layout_marginTop="10dp"
			        android:layout_weight="2"
				    android:textSize="20sp" />
		   	   
		   		<TextView 
		       	    android:id="@+id/scorePart"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/scorePart"
		            android:layout_marginBottom="7dp"
				    android:layout_marginTop="10dp"
				    android:textSize="20sp"/>
	   			</LinearLayout>
			</LinearLayout>   
	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:background="#33000000"
	    android:layout_below="@+id/infoJoueur"
	    android:orientation="vertical" >

	    <ListView
	        android:id="@+id/list"        
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"/>

	    <TextView
	        android:id="@+id/empty"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_liste_vide" />
	</LinearLayout>
</RelativeLayout>

