<?xml version="1.0" encoding="utf-8"?>

<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background">
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <ImageView
		        android:id="@+id/imageView1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/titre"
		        android:contentDescription="@string/app_name" 
		        android:layout_marginBottom="7dp"
		        android:layout_marginTop="10dp"/>
	    
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lblNomPool"
	        android:gravity="center"
	        android:layout_marginLeft="10dip"
	        android:layout_marginTop="15dip" />
	     
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:background="@drawable/edittext_shape"
	        android:layout_marginLeft="5dip"
	        android:layout_marginRight="5dip"
	        android:layout_marginBottom="15dip" 
	        android:padding="10sp"/>
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lblMdp"
	        android:gravity="center"
	        android:layout_marginLeft="10dip" />
    	
    	<EditText
	        android:id="@+id/txtMotDePasse"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:background="@drawable/edittext_shape"
	        android:layout_marginLeft="5dip"
		    android:layout_marginRight="5dip"
		    android:layout_marginBottom="30dip"
		    android:padding="10sp"/>
	     
        <Button
	        android:id="@+id/btnLaConn"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btnConnexionPool"
	        android:textColor="#000000"
			android:textSize="20sp"		
			android:background="@drawable/button_shape"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="0"
			android:shadowRadius="25" />
    
	
	    <Button
	        android:id="@+id/btnConnReset"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/btnConnexionReset"
	        android:textColor="#000000"
			android:textSize="20sp"		
			android:background="@drawable/button_shape"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="0"
			android:shadowRadius="25" />
	
	</LinearLayout>
</ScrollView>


