<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
		    android:id="@+id/imageView1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:src="@drawable/titre"
		    android:contentDescription="@string/app_name" 
		    android:layout_marginBottom="30dip"
		    android:layout_marginTop="10dp"/>        

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="300sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:layout_marginBottom="30dip"            
            android:text="@string/btnSignIn" 
            android:background="@drawable/button_shape"
            android:textColor="#000000"
			android:textSize="20sp"			
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="0"
			android:shadowRadius="25" />        

        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_status"
            android:layout_marginBottom="7dp"
		    android:layout_marginTop="10dp" 
		    android:gravity="center"
		    android:textSize="20sp"  />
    </LinearLayout>

</ScrollView>