<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginTop="5dip"  
	    android:layout_marginBottom="5dip"
	    android:orientation="vertical" 
	    android:layout_above="@+id/footerlayout">
	    
	    <ListView
	        android:id="@android:id/list"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"/>
	    
	    <TextView
	        android:id="@android:id/empty"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/lbl_liste_vide"/>
	
	</LinearLayout>

	<LinearLayout android:id="@+id/footerlayout"
        android:layout_marginTop="3dip"
        android:layout_height="45dip"
        android:orientation="horizontal" 
        android:layout_width="fill_parent" 
        android:gravity="center"
        android:layout_alignParentBottom="true" >
    
        <Button
            android:id="@+id/btnAccepter" 
            android:text="@string/btnAccepter" 
            android:layout_width="0dip"
            android:layout_height="45dip"
            android:layout_weight="1"
            android:textColor="#000000"
			android:textSize="20sp"		
			android:background="@drawable/button_shape"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="0"
			android:shadowRadius="25">
        </Button> 
             
        <Button
            android:id="@+id/btnRege" 
            android:text="@string/btnRege"
            android:layout_width="0dip"
            android:layout_height="45dip"
            android:layout_weight="1"
            android:textColor="#000000"
			android:textSize="20sp"		
			android:background="@drawable/button_shape"
			android:shadowColor="#FFFFFF"
			android:shadowDx="0"
			android:shadowDy="0"
			android:shadowRadius="25" >
        </Button>   
    </LinearLayout>
</RelativeLayout>